--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,14 @@
         <version>1.1.2.RELEASE</version>
     </parent>
 
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
     <developers>
         <developer>
             <id>mauro.franceschini</id>
